convert lists, alignment fixes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -38,9 +38,10 @@ body {
 #hero-container {
   position: relative;
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: block;
   padding: 0;
+  text-align: center;
+  justify-content: center;
 }
 
 .hero-image {
@@ -48,7 +49,6 @@ body {
   height: auto;
   max-height: 750px;
   padding: 0;
-  grid-column: 1 / span 2;
   overflow: hidden;
 }
 
@@ -64,12 +64,14 @@ body {
 
 .hero-text {
   position: absolute;
-  top: 20%;
-  left: 5%; 
   color: white;
   padding: 0;
-  grid-column: 1 / span 1;
-  max-width: 90%; 
+  margin: auto;
+  text-align: center;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 70%; 
 }
 
 .hero-text p {
@@ -170,6 +172,7 @@ nav {
   display: none;
   cursor: pointer;
   margin: auto;
+  margin-right: var(--spacing-4);
   align-items: center;
   color: #FFFFFF;
 }
@@ -249,7 +252,6 @@ nav {
 
 #newsletter-email-input {
   margin-top: 10px;
-  margin-left: var(--spacing-3);
 }
 
 footer {
@@ -268,30 +270,44 @@ footer {
   padding: 50px;
 }
 
-.footer-section ul {
-  list-style-type: none;
-  margin: 0;
-  padding-left: var(--spacing-3);
+.footer-container a {
+  margin-bottom: var(--spacing-2);
 }
 
-.footer-section li {
-  padding-top: 10px;
+.footer-navigation-items {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
-.social-icons li {
-  display: inline-block;
-  margin-right: 10px;
+.social-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-icons a {
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .footer-section img {
   width: 30px;
   background-color: var(--accent-main);
   border-radius: 50%;
+  
+}
+
+.footer-contact-items {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .copywrite {
   justify-content: center;
   text-align: center;
+  margin-bottom: var(--spacing-4);
 }
 
 .designed-by {
@@ -443,16 +459,15 @@ button {
   .logo {
     color: #FFFFFF;
   }
-
-  #hero-container {
-    grid-template-columns: 1fr; 
-  }
   
   .hero-text {
-    left: 10%; 
-    top: 15%; 
-    max-width: 80%; 
+    top: 50%;
+    left: 50%;
+    width: 100%; 
+    transform: translate(-50%, -50%);
+    max-width: 100%;
   }
+
   html {
     font-size: 90%; 
   }
@@ -553,6 +568,7 @@ button {
   .accordion {
     margin-left: 0; 
   }
+
 }
 
 
